fix(console): checkbox label should not wrap

--- a/packages/console/src/components/Checkbox/index.module.scss
+++ b/packages/console/src/components/Checkbox/index.module.scss
@@ -59,6 +59,7 @@
   .label {
     font: var(--font-body-medium);
     color: var(--color-text);
+    white-space: nowrap;
     cursor: inherit;
   }
 
